tests/fixtures/valid/operators/float_operations.py
# Test float operations

# Arithmetic
print(10.5 + 3.2)
print(10.5 - 3.2)
print(10.5 * 3.2)
print(10.5 / 3.2)
print(10.5 // 3.2)
print(10.5 % 3.2)
print(2.0 ** 10.0)

# Unary
print(-42.5)
print(+42.5)

# Comparison with float
print(5.5 < 10.5)
print(10.5 < 5.5)
print(5.5 <= 5.5)
print(5.5 <= 10.5)
print(10.5 > 5.5)
print(5.5 > 10.5)
print(5.5 >= 5.5)
print(10.5 >= 5.5)
print(5.5 == 5.5)
print(5.5 == 10.5)
print(5.5 != 10.5)
print(5.5 != 5.5)

# Float with int
print(5.5 + 2)
print(5.5 - 2)
print(5.5 * 2)
print(5.5 / 2)
print(5.5 // 2)
print(5.5 % 2)
print(2.5 ** 2)

# Comparisons with int
print(5.5 < 6)
print(6.0 < 5)
print(5.0 <= 5)
print(5.0 >= 5)
print(5.5 > 5)
print(5.5 == 5)
print(5.0 == 5)

# Float with bool
print(5.5 + True)
print(5.5 - True)
print(5.5 * True)
print(5.5 / True)
print(5.5 // True)
print(5.5 % True)
print(2.5 ** True)

# Comparisons with bool
print(1.0 < True)
print(1.0 <= True)
print(1.0 > True)
print(1.0 >= True)
print(1.0 == True)
print(0.0 == False)

# Identity (float with float)
print(5.5 is 5.5)
print(5.5 is not 5.5)
print(5.5 is not 6.5)

# Membership in collections
print(1.0 in [1, 2, 3])
print(1.5 in [1, 2, 3])
print(1.0 not in [1, 2, 3])
print(1.5 not in [1, 2, 3])

# Float in set
print(1.0 in {1, 2, 3})
print(1.5 in {1, 2, 3})
