tests/fixtures/invalid/float_lt_set.py
# Cannot compare with < Float and Set[int]
x: bool = 1.0 < {1, 2, 3}
